--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
         <div class="pill">4 Weeks • 2 Sessions / Week</div>
         <div class="timeline">
           <ul>
-            <li><span class="dot"></span><div><strong>Week 1</strong> — Intro, setup, Hello World, I/O, basic variables</div></li>
-            <li><span class="dot"></span><div><strong>Week 2</strong> — Conditions, loops, exercises</div></li>
-            <li><span class="dot"></span><div><strong>Week 3</strong> — Arrays, functions, looping over arrays</div></li>
-            <li><span class="dot"></span><div><strong>Week 4</strong> — Final project & polishing</div></li>
+            <li><span class="dot"></span><div><strong>Week 1</strong> — Intro, setup, Hello World, Using IDE, I/O</div></li>
+            <li><span class="dot"></span><div><strong>Week 2</strong> — variables, Conditions, Data types ,loops, exercises</div></li>
+            <li><span class="dot"></span><div><strong>Week 3</strong> — If Statement, functions, looping over arrays</div></li>
+            <li><span class="dot"></span><div><strong>Week 4</strong> — Arrays, Final project & polishing</div></li>
           </ul>
         </div>
       </div>
